# diary-project

./: .gitignore  .gitmessage.txt  .pre-commit-config.yaml  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 09c1b893b476_add_user_model.py  49bd525f58f4_initial.py  5c6b376cd3c5_add_password_column_to_users.py  6b7fc285bf6d_add_diary_model.py  b3c1c7671d84_add_is_bookmarked_column_to_quotes_table.py
app/: main.py
app/api/v1/: bookmark.py  diary.py  question.py  quote.py
app/core/: jwt.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  bookmark.py  diary.py  question.py  quote.py  user.py
app/repositories/: diary_repo.py
app/routers/: user.py
app/schemas/: diary.py  quote.py  user.py
app/scraping/: insert_question.py  quote_scraper.py
app/services/: diary_service.py
