[tool.poetry]
name = "diary-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
requests = "^2.32.5"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
greenlet = "^3.2.4"
pymysql = "^1.1.2"
cryptography = "^45.0.7"
python-dotenv = "^1.1.1"
beautifulsoup4 = "^4.13.5"
lxml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"
alembic = "^1.16.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
