
[tool.poetry]
name = "diary-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
requests = "^2.32.5"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"   # sync 드라이버 (alembic이나 일부 도구용)
asyncpg = "^0.30.0"           # async 드라이버 (SQLAlchemy async engine)
greenlet = "^3.2.4"
cryptography = "^45.0.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"
alembic = "^1.16.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
